added screnshoots and wrote some slides.

--- a/Verri/header.tex
+++ b/Verri/header.tex
@@ -7,10 +7,11 @@
 %\documentclass[gray,handout, pdftex, 11pt]{beamer}
 %\documentclass[handout, pdftex, 11pt]{beamer}
 
-\documentclass[pdftex, 11pt]{beamer}
+\documentclass[pdflatex, 11pt]{beamer}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{calligra}
 \usepackage{lmodern}
 %\usepackage[italian]{babel}
 \usepackage{acronym}
@@ -27,7 +28,7 @@
 \def\transW{8mm}
 \def\transH{2mm}
 
-\colorlet{mmcb}{black!20}
+\colorlet{mmcb}{black!70}
 \colorlet{mmc1}{red!80}
 \colorlet{mmc2}{blue!80}
 \colorlet{c1}{green!20}
@@ -46,26 +47,11 @@
   \temporal<#1>{\pgfkeysalso{#2}}{\pgfkeysalso{#3}}{\pgfkeysalso{#4}} % \pgfkeysalso doesn't change the path
 }}
 
+\tikzstyle{alertStar}=[circle, decorate, decoration={zigzag,segment length=3.12mm,amplitude=1mm}, align=center, drop shadow, draw=drawColor, fill=white]
 \tikzstyle{oval}=[ellipse, align=center, drop shadow, draw=drawColor, fill=white]
 \tikzstyle{rect}=[rectangle, rounded corners=2pt, align=center, drop
 shadow, draw=drawColor, fill=white]
-\tikzstyle{comment}=[text=commentColor,font=\itshape]
-\tikzstyle{textLab}=[]
 \tikzstyle{arrow}=[->, very thick, >=stealth', draw=black!80]
-\tikzstyle{darrow}=[->, dash pattern=on 3pt off2pt, very thick, >=stealth', draw=black!80]
-\tikzstyle{fInt}=[circle, align=center, drop shadow, draw=drawColor, fill=white]
-\tikzstyle{fStartEnd}=[ellipse, align=center, drop shadow, draw=drawColor, fill=white]
-\tikzstyle{fInput}=[trapezium, trapezium left angle=70, trapezium right angle=110,
-align=center, drop shadow, draw=drawColor, fill=white]
-\tikzstyle{fProcess}=[rectangle, align=center, drop shadow, draw=drawColor, fill=white]
-\tikzstyle{fSelection}=[diamond, shape aspect=3, align=center, drop
-shadow, draw=drawColor, fill=white]
-\tikzstyle{fOutput}=[tape, tape bend top=none, align=center, drop shadow, draw=drawColor, fill=white]
-\tikzstyle{mem}=[rectangle, align=center, draw=drawColor, fill=white]
-\tikzstyle{clo}=[cloud, aspect=2, align=center, drop shadow, draw=drawColor, fill=white]
-\tikzstyle{file}=[chamfered rectangle, chamfered rectangle corners =
-north east, align=center, drop shadow, draw=drawColor, fill=white]
-\tikzstyle{files}=[chamfered rectangle, chamfered rectangle corners = north east, align=center, double copy shadow, draw=drawColor, fill=white]
 \tikzstyle{myMindmap}=[mindmap,
 every node/.style={concept, minimum size=5mm, text width=5mm}, 
 % every child/.style={level distance=10mm, concept color=mmcb}
@@ -110,30 +96,14 @@ shadow, minimum width=\transH, minimum height=\transW]
    % linewidth=8cm,
 }
 
-\lstdefinestyle{customBash}{
-   language=bash,
+\lstdefinestyle{customInlineJava}{
+   language=Java,
    % basicstyle=\small\ttfamily\bfseries,
    basicstyle=\ttfamily,
    keywordstyle=\color{blue}\ttfamily,
    stringstyle=\color{red}\ttfamily,
    commentstyle=\color{green}\ttfamily,
-   morecomment=[l][\color{magenta}]{\#},
-   % breaklines=false,
-   breaklines=true, breakatwhitespace=false,
-   postbreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\color{red}\hookrightarrow\space}},
-   frameround=fttt,
-   frame=trBL,
-   backgroundcolor=\color{green!20},
-   numbers=left,
-   stepnumber=1,    
-   firstnumber=1,
-   numberfirstline=true,
-   numberstyle=\tiny\color{black!50},
-   xleftmargin=2em,
-   framexleftmargin=1.5em,
-   % rulesepcolor=\color{gray},
-   rulecolor=\color{black}
-   % linewidth=8cm,
+   morecomment=[l][\color{magenta}]{\#}
 }
 
 \lstnewenvironment{jblock}[1][]
@@ -148,37 +118,14 @@ shadow, minimum width=\transH, minimum height=\transW]
   \lstinputlisting[style=customJava, title={\texttt{\detokenize{#2}}}, #1]{#2}
 }
 
-\newcommand{\jj}[2][]{\lstinline[style=customJava,#1]`#2`}
+\newcommand{\jj}[2][]{\lstinline[style=customInlineJava,#1]`#2`}
   %\colorbox{codeBgColor}{
   %  \lstinline[style=customJava,#1]`#2`
   %}
 %}
 
-\lstnewenvironment{bblock}[1][]
-{
-  \lstset{
-    style=customBash,
-    #1
-  }
-}{}
-
-\newcommand{\bfile}[2][]{
-  \lstinputlisting[style=customBash, title={\texttt{\detokenize{#2}}}, #1]{#2}
-}
-
-\newcommand{\bb}[2][]{
-  \colorbox{bashBgColor}{
-    \lstinline[style=customBash,#1]`#2`
-  }
-}
-
 \graphicspath{{img/}}
 \lstset{inputpath=../cSrc/}
-
-\newcommand{\me}{\mathrm{e}}
-\newcommand{\C}{\texttt{C}}
-\newcommand{\gcc}{\texttt{gcc}}
-\newcommand{\bash}{\texttt{Bash}}
 
 \definecolor{links}{HTML}{2A1B81}
 \hypersetup{colorlinks,linkcolor=links,urlcolor=links}
@@ -201,7 +148,7 @@ shadow, minimum width=\transH, minimum height=\transW]
   \setbeamercovered{transparent}
   %\setbeameroption{show notes on second screen=right}
   \setbeamertemplate{navigation symbols}{}
-  \setbeamertemplate{footline}{}
+  %\setbeamertemplate{footline}{}
 
   \bibliographystyle{abbrv}  
   %\renewcommand\bibfont{\scriptsize}
@@ -215,6 +162,7 @@ shadow, minimum width=\transH, minimum height=\transW]
 \usebackgroundtemplate
 {
   \begin{tikzpicture}
-    \node[opacity=0.1] {\includegraphics[scale=1]{img/logoUnifi.png}};
+    \node[opacity=0.1] {\includegraphics[]{img/logoUnifi.png}};
+%    \node[opacity=0.04] {\includegraphics[scale=1]{img/logoUnifi.eps}};
   \end{tikzpicture}
 }
