--- a/Verri/header.tex
+++ b/Verri/header.tex
@@ -28,6 +28,13 @@
 \def\transW{8mm}
 \def\transH{2mm}
 
+\tikzstyle{obstacle}=[fill=green, draw=black]
+\tikzstyle{convexHull}=[fill=blue!30]
+\tikzstyle{convexHullBord}=[color=black, dash pattern=on 3pt off 3pt]
+\tikzstyle{controlPoly}=[color=black, line width=0.25mm]
+\tikzstyle{spline}=[color=red, line width=0.5mm]
+\tikzstyle{controlVert}=[color=green, draw=black]
+
 \colorlet{mmcb}{black!70}
 \colorlet{mmc1}{red!80}
 \colorlet{mmc2}{blue!80}
