--- a/Verri/header.tex
+++ b/Verri/header.tex
@@ -25,6 +25,8 @@
 \usetikzlibrary{shapes, chains, scopes, shadows, positioning, arrows,
   decorations.pathmorphing, calc, mindmap, petri}
 
+\newcommand{\bigO}{\ensuremath{\mathcal{O}}}
+
 \def\transW{8mm}
 \def\transH{2mm}
 
