added slide with better complexity study

--- a/Verri/header.tex
+++ b/Verri/header.tex
@@ -164,7 +164,7 @@ shadow, minimum width=\transH, minimum height=\transW]
   %\renewcommand\bibfont{\scriptsize}
   \setbeamertemplate{bibliography item}{\textbullet}
   \setbeamertemplate{itemize item}{\checkmark}
-  \setbeamertemplate{itemize subitem}{-}
+  % \setbeamertemplate{itemize subitem}{-}
   \setbeamertemplate{enumerate items}[default]
   \setbeamertemplate{sections/subsections in toc}[square]
 }
